Update views and their design
- Add navbar and layout(was renamed) partials
- Add new and update existing view pages
- Rename and update main css file

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,52 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{> layout page="index"}}
+<div class="container-fluid">
+    <div class="row">
+        <div class="sidebar col-sm-3 col-lg-2">
+            <ul class="nav flex-column">
+                <li class="nav-item category">
+                  <h5>Vk</h5>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+            <ul class="nav flex-column">
+                <li class="nav-item category">
+                  <h5>Telegram</h5>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+            <ul class="nav flex-column">
+                <li class="nav-item category">
+                  <h5>Facebook</h5>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-9 col-lg-10 bg-light">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+        </div>
+    </div>
+</div>
