--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,6 +13,10 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
+.sidebar .nav-link:hover {
+  color: rgba(255, 255, 255, 0.75);
+}
+
 .sidebar .active {
   color: #f9fafa;
 }
@@ -20,5 +24,5 @@
 .sidebar .category {
   color: #b3a5b4;
   background-color: #20222d;
-  padding-left: 1rem;
+  padding: 0.5rem 1rem;
 }
