--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,18 +2,22 @@
 <div class="container-fluid">
     <div class="row">
         <div class="sidebar col-sm-3 col-lg-2">
+            <form class="form-inline py-2 px-1">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search by name" aria-label="Search by name">
+                <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+            </form>
             <ul class="nav flex-column">
                 <li class="nav-item category">
                   <h5>Vk</h5>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
+                    <a class="nav-link active" href="#">Current user</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">User 2</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">User 3</a>
                 </li>
             </ul>
             <ul class="nav flex-column">
@@ -21,13 +25,13 @@
                   <h5>Telegram</h5>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
+                    <a class="nav-link" href="#">User 4</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">User 5</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">User 6</a>
                 </li>
             </ul>
             <ul class="nav flex-column">
@@ -35,13 +39,13 @@
                   <h5>Facebook</h5>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
+                    <a class="nav-link" href="#">User 7</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">User 8</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">User 9</a>
                 </li>
             </ul>
         </div>
