--- a/web-ui/views/partials/navbar.hbs
+++ b/web-ui/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Social watcher</a>
+  <a class="navbar-brand" href="/">Social stalker</a>
   <button class="navbar-toggler d-lg-none" type="button"
    data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent"
     aria-expanded="false" aria-label="Toggle navigation">
