Display basic info about user
Index page now displays(as placeholders) user's first and last name,
status and source of the information.

--- a/web-ui/views/index.hbs
+++ b/web-ui/views/index.hbs
@@ -50,7 +50,13 @@
             </ul>
         </div>
         <div class="col-sm-9 col-lg-10 bg-light">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+            <div class="p-2">
+                <h3 class="user-secondary-info">Firstname Lastname</h3>
+                <span class="user-secondary-info user-status ml-3">Offline</span>
+            </div>
+            <div class="p-2">
+                <h5 class="user-secondary-info">Vk</h5>
+            </div>
         </div>
     </div>
 </div>
