--- a/web-ui/views/partials/layout.hbs
+++ b/web-ui/views/partials/layout.hbs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
+    <link rel='stylesheet' href='/stylesheets/chartist.css' />
+    <link rel='stylesheet' href='/stylesheets/chartist-plugin-tooltip.css' />
     <link rel='stylesheet' href='/stylesheets/main.css' />
   </head>
   <body>
@@ -13,5 +15,8 @@
     <script src="/scripts/jquery.js"></script>
     <script src="/scripts/popper.js"></script>
     <script src="/scripts/bootstrap.js"></script>
+    <script src="/scripts/chartist.js"></script>
+    <script src="/scripts/chartist-plugin-tooltip.js"></script>
+    <script src="/scripts/moment.js"></script>
   </body>
 </html>
