--- a/web-ui/views/partials/layout.hbs
+++ b/web-ui/views/partials/layout.hbs
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
     <link rel='stylesheet' href='/stylesheets/chartist.css' />
     <link rel='stylesheet' href='/stylesheets/chartist-plugin-tooltip.css' />
+    <link rel='stylesheet' href='/stylesheets/open-iconic-bootstrap.css' />
     <link rel='stylesheet' href='/stylesheets/main.css' />
-  </head>
-  <body>
+</head>
+
+<body>
+
     {{> navbar}}
+
     {{{ body }}}
+
     <script src="/scripts/jquery.js"></script>
     <script src="/scripts/popper.js"></script>
     <script src="/scripts/bootstrap.js"></script>
     <script src="/scripts/chartist.js"></script>
     <script src="/scripts/chartist-plugin-tooltip.js"></script>
     <script src="/scripts/moment.js"></script>
-  </body>
+</body>
+
 </html>
