--- a/web-ui/views/partials/navbar.hbs
+++ b/web-ui/views/partials/navbar.hbs
@@ -1,21 +1,20 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Social stalker</a>
-  <button class="navbar-toggler d-lg-none" type="button"
-   data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div id="navbarContent" class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item {{navActive "index"}}">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item {{navActive "settings"}}">
-        <a class="nav-link" href="/settings">Settings</a>
-      </li>
-      <li class="nav-item {{navActive "help"}}">
-        <a class="nav-link" href="/help">Help</a>
-      </li>
-    </ul>
-  </div>
+    <a class="navbar-brand" href="/">Social stalker</a>
+    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarContent"
+    aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="navbarContent" class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item {{navActive "index"}}">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item {{navActive "settings"}}">
+                <a class="nav-link" href="/settings">Settings</a>
+            </li>
+            <li class="nav-item {{navActive "help"}}">
+                <a class="nav-link" href="/help">Help</a>
+            </li>
+        </ul>
+    </div>
 </nav>
