--- a/web-ui/views/index.hbs
+++ b/web-ui/views/index.hbs
@@ -3,8 +3,8 @@
     <div class="row">
         <div class="sidebar col-sm-3 col-lg-2">
             <form class="form-inline py-2 px-1">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search by name" aria-label="Search by name">
-                <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="text" name="name" placeholder="Search by name" aria-label="Search by name">
+                <button id="search" class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
             </form>
             <ul class="nav flex-column">
                 <li class="nav-item category">
