Split css into separate files

--- a/web-ui/public/stylesheets/main.css
+++ b/web-ui/public/stylesheets/main.css
@@ -5,92 +5,7 @@
     color: #868e96;
 }
 
-.sidebar .nav-link {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.sidebar .nav-link:hover {
-    color: rgba(255, 255, 255, 0.75);
-}
-
-.sidebar .active {
-    color: #f9fafa;
-}
-
-.sidebar .category {
-    background-color: #20222d;
-    padding: 0.5rem 1rem;
-}
-
-.sidebar .category a {
-    display: block;
-    color: #b3a5b4bf;
-}
-
-.sidebar .category a:hover {
-    color: #b3a5b4;
-    text-decoration: none;
-}
-
-.sidebar .category h5 {
-    display: inline-block;
-}
-
-.sidebar .category .oi {
-    float: right;
-}
-
-.user-additional-info {
-    display: inline-block;
-}
-
-.chartist-tooltip {
-    background-color: #4c5457;
-    color: rgba(255, 255, 255, 0.75);
-}
-
-.chartist-tooltip:before {
-    border-top-color: #4c5457;
-}
-
-.ct-series-a .ct-bar {
-    stroke: #de6060;
-}
-
-.ct-chart .ct-label.ct-horizontal {
-    display: inline-block;
-    white-space: nowrap;
-}
-
-.timeline {
-    position: relative;
-    overflow: hidden;
-}
-
-.timeline-controls {
-    position: absolute;
-    height: 100%;
-}
-
-.timeline-controls a {
-    color: rgba(0, 0, 0, 0.5);
-}
-
-.timeline-controls a:hover {
-    color: rgba(0, 0, 0, 0.75);
-    text-decoration: none;
-}
-
-.timeline-controls.right {
-    right: 0;
-}
-
-.timeline-controls .oi {
-    font-size: 1.5rem;
-    top: 35%;
-}
-
-.user-info-placeholder {
+.placeholder {
     height: 100%;
     max-height: 10rem;
 }
