--- a/web-ui/views/index.hbs
+++ b/web-ui/views/index.hbs
@@ -9,7 +9,8 @@
     <div class="row">
         <div class="sidebar col-sm-3 col-lg-2">
             <form class="form-inline py-2 px-1">
-                <input class="form-control mr-sm-2" type="text" name="name" placeholder="Search by name" aria-label="Search by name">
+                <input class="form-control mr-sm-2" type="text" name="name" placeholder="Search by name"
+                aria-label="Search by name">
                 <button id="search" class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
             </form>
             <ul class="nav flex-column">
@@ -68,7 +69,7 @@
             <div class="user-info sticky-top">
             </div>
             <div class="placeholder sticky-top d-flex justify-content-center align-items-center">
-                    <h4 class="text-secondary">Please select a user</h4>
+                <h4 class="text-secondary">Please select a user</h4>
             </div>
         </div>
     </div>
