--- a/web-ui/views/partials/usersource/vk.hbs
+++ b/web-ui/views/partials/usersource/vk.hbs
@@ -1,21 +1,21 @@
 <div class="alert alert-ok alert-success alert-dismissible fade show hidden" role="alert">
-  <button type="button" class="close" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <strong>Success!</strong> Settings have been saved.
+    <button type="button" class="close" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>Success!</strong> Settings have been saved.
 </div>
 <div class="alert alert-error alert-danger alert-dismissible fade show hidden" role="alert">
-  <button type="button" class="close" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <strong>Error!</strong> Could <strong>not</strong> save settings.
+    <button type="button" class="close" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>Error!</strong> Could <strong>not</strong> save settings.
 </div>
 <form class="update {{source}} p-2" action="/settings/source/{{source.name}}" method="post">
     <div class="form-group row">
         <label class="col-sm-2 col-form-label" for="input-app-id">Application's id:</label>
         <div class="col-sm-10">
-            <input name="app_id" type="text" class="form-control" id="input-app-id" value="{{source.app_id}}" placeholder="Enter application id"
-                aria-describedby="app-id-help">
+            <input name="app_id" type="text" class="form-control" id="input-app-id" value="{{source.app_id}}"
+            placeholder="Enter application id" aria-describedby="app-id-help">
             <small id="app-id-help" class="form-text text-muted">
                 Can be aquired on your app setiings <a class="text-info" href="https://vk.com/apps?act=manage">page</a>.
             </small>
@@ -24,21 +24,24 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label" for="input-app-secure">Application's secure key:</label>
         <div class="col-sm-10">
-            <input name="app_secure_key" type="text" class="form-control" id="input-app-secure" value="{{source.app_secure_key}}" placeholder="Enter application secure key"
-                aria-describedby="app-secure-help">
+            <input name="app_secure_key" type="text" class="form-control" id="input-app-secure"
+            value="{{source.app_secure_key}}" placeholder="Enter application secure key"
+            aria-describedby="app-secure-help">
             <small id="app-secure-help" class="form-text text-muted">
-                Can be aquired on your app setiings <a class="text-info" href="https://vk.com/apps?act=manage">page</a>.
+                Can be aquired on your app setiings 
+                <a class="text-info" href="https://vk.com/apps?act=manage">page</a>.
             </small>
         </div>
     </div>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label" for="input-user-token">User's access token:</label>
         <div class="col-sm-10">
-            <input name="user_token" type="text" class="form-control" id="input-user-token" value="{{source.user_token}}" placeholder="Enter access token"
-                aria-describedby="user-token-help">
+            <input name="user_token" type="text" class="form-control" id="input-user-token" value="{{source.user_token}}"
+            placeholder="Enter access token" aria-describedby="user-token-help">
             <small id="user-token-help" class="form-text text-muted">
-                Can be aquired from the url on <a class="text-info" href="https://oauth.vk.com/authorize?client_id={{source.app_id}}&redirect_uri=https://oauth.vk.com/blank.html&scope=friends,offline&response_type=token&v=5.68"
-            target="_blank">this page</a>. You'll have to copy the value after '<span class="font-italic">access_token=</span>'.
+                Can be aquired from the url on 
+                <a class="text-info" href="https://oauth.vk.com/authorize?client_id={{source.app_id}}&redirect_uri=https://oauth.vk.com/blank.html&scope=friends,offline&response_type=token&v=5.68"
+                    target="_blank">this page</a>. You'll have to copy the value after '<span class="font-italic">access_token=</span>'.
             </small>
         </div>
     </div>
@@ -50,17 +53,17 @@
 </form>
 
 <script>
-$(function () {
-    $('form.update').submit(function (event) {
+$(function() {
+    $('form.update').submit(function(event) {
         event.preventDefault();
         let form = $(this);
         $.ajax({
             type: form.attr('method'),
             url: form.attr('action'),
             data: form.serialize()
-        }).done(function (data) {
+        }).done(function(data) {
             $('.alert-ok').show();
-        }).fail(function (data) {
+        }).fail(function(data) {
             $('.alert-error').show();
         });
     });
