--- a/web-ui/views/partials/usersource/vk.hbs
+++ b/web-ui/views/partials/usersource/vk.hbs
@@ -14,7 +14,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label" for="input-app-id">Application's id:</label>
         <div class="col-sm-10">
-            <input name="app_id" type="text" class="form-control" id="input-app-id" value="{{source.app_id}}"
+            <input name="appId" type="text" class="form-control" id="input-app-id" value="{{source.appId}}"
             placeholder="Enter application id" aria-describedby="app-id-help">
             <small id="app-id-help" class="form-text text-muted">
                 Can be aquired on your app setiings <a class="text-info" href="https://vk.com/apps?act=manage">page</a>.
@@ -24,8 +24,8 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label" for="input-app-secure">Application's secure key:</label>
         <div class="col-sm-10">
-            <input name="app_secure_key" type="text" class="form-control" id="input-app-secure"
-            value="{{source.app_secure_key}}" placeholder="Enter application secure key"
+            <input name="appSecureKey" type="text" class="form-control" id="input-app-secure"
+            value="{{source.appSecureKey}}" placeholder="Enter application secure key"
             aria-describedby="app-secure-help">
             <small id="app-secure-help" class="form-text text-muted">
                 Can be aquired on your app setiings 
@@ -36,11 +36,11 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label" for="input-user-token">User's access token:</label>
         <div class="col-sm-10">
-            <input name="user_token" type="text" class="form-control" id="input-user-token" value="{{source.user_token}}"
+            <input name="userToken" type="text" class="form-control" id="input-user-token" value="{{source.userToken}}"
             placeholder="Enter access token" aria-describedby="user-token-help">
             <small id="user-token-help" class="form-text text-muted">
                 Can be aquired from the url on 
-                <a class="text-info" href="https://oauth.vk.com/authorize?client_id={{source.app_id}}&redirect_uri=https://oauth.vk.com/blank.html&scope=friends,offline&response_type=token&v=5.68"
+                <a class="text-info" href="https://oauth.vk.com/authorize?client_id={{source.appId}}&redirect_uri=https://oauth.vk.com/blank.html&scope=friends,offline&response_type=token&v=5.68"
                     target="_blank">this page</a>. You'll have to copy the value after '<span class="font-italic">access_token=</span>'.
             </small>
         </div>
