Increase height of time-controls links

--- a/web-ui/public/stylesheets/index.css
+++ b/web-ui/public/stylesheets/index.css
@@ -67,6 +67,8 @@
 
 .timeline-controls a {
     color: rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    height: 100%;
 }
 
 .timeline-controls a:hover {
