Make sidebar scrollable
- Remove 'sticky-top' class from content div
- Fix sidebar's height and make it scrollable

--- a/web-ui/public/stylesheets/main.css
+++ b/web-ui/public/stylesheets/main.css
@@ -3,6 +3,8 @@
     padding-right: 0;
     background-color: #4C5457;
     color: #868e96;
+    height: 90vh;
+    overflow: auto;
 }
 
 .placeholder {
