--- a/web-ui/public/stylesheets/index.css
+++ b/web-ui/public/stylesheets/index.css
@@ -10,6 +10,10 @@
     color: #f9fafa;
 }
 
+.sidebar .form-control {
+    width: 70%;
+}
+
 .sidebar .category {
     background-color: #20222d;
     padding: 0.5rem 1rem;
