--- a/web-ui/views/index.hbs
+++ b/web-ui/views/index.hbs
@@ -66,9 +66,9 @@
             </ul>
         </div>
         <div class="col-sm-9 col-lg-10 bg-light">
-            <div class="user-info sticky-top">
+            <div class="user-info">
             </div>
-            <div class="placeholder sticky-top d-flex justify-content-center align-items-center">
+            <div class="placeholder d-flex justify-content-center align-items-center">
                 <h4 class="text-secondary">Please select a user</h4>
             </div>
         </div>
